@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2006  Free Software Foundation, Inc.
+# Copyright (C) 2006, 2007  Free Software Foundation, Inc.
 #
 # This file is part of GNU Automake.
 #
@@ -42,14 +42,12 @@ mv aclocal.tmp aclocal.m4
 
 $MAKE 2>stderr
 cat stderr
-grep 'WARNING:.*automake.*probably too old' stderr
-grep 'WARNING:.*autoconf.*probably too old' stderr
-test 2 = `grep -c 'aclocal.m4:.*this file was generated for' stderr`
+grep 'You have another version of autoconf' stderr
+grep -c 'aclocal.m4:.*this file was generated for' stderr
 
 $MAKE 2>stderr
 cat stderr
-grep 'WARNING:.*automake.*probably too old' stderr && exit 1
-grep 'WARNING:.*autoconf.*probably too old' stderr && exit 1
+grep 'You have another version of autoconf' stderr && exit 1
 grep 'aclocal.m4:.*this file was generated for' stderr && exit 1
 
 :
