@@ -14,6 +14,10 @@ Bugs fixed in 1.10.0a:
   - $(EXEEXT) is automatically appended to filenames of XFAIL_TESTS
     that have been declared as programs in the same Makefile.
     This is for consistency with the analogous change to TESTS in 1.10.
+
+  - The autoconf version check implemented by aclocal in aclocal.m4
+    (and new in Automake 1.10) is degraded to a warning.  This helps
+    in the common case where the Autoconf versions used are compatible.
 
 New in 1.10:
 
