@@ -1,3 +1,13 @@
+2007-06-23  Paul Eggert  <eggert@cs.ucla.edu>
+	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* aclocal.in (write_aclocal): Warn about autoconf
+	incompatibilities instead of making them fatal.
+	* tests/missing4.test: Adjust.
+	* NEWS: Update.
+	Problem reported by Bruno Haible in
+	<http://lists.gnu.org/archive/html/bug-automake/2007-06/msg00010.html>.
+
 2007-05-03  Stepan Kasal  <kasal@ucw.cz>
 
 	* doc/automake.texi, lib/Automake/Rule.pm: Fix typos.
